crates/macro/ui-tests/async-errors.stderr
error[E0277]: the trait bound `Result<(), ()>: IntoJsResult` is not satisfied
  --> ui-tests/async-errors.rs:51:24
   |
51 | pub async fn bad1() -> Result<(), ()> {
   |                        ^^^^^^^^^^^^^^ the trait `IntoJsResult` is not implemented for `Result<(), ()>`
   |
   = help: the following other types implement trait `IntoJsResult`:
             Result<(), E>
             Result<T, E>

error[E0277]: the trait bound `Result<(), BadType>: IntoJsResult` is not satisfied
  --> ui-tests/async-errors.rs:55:24
   |
55 | pub async fn bad2() -> Result<(), BadType> {
   |                        ^^^^^^^^^^^^^^^^^^^ the trait `IntoJsResult` is not implemented for `Result<(), BadType>`
   |
   = help: the following other types implement trait `IntoJsResult`:
             Result<(), E>
             Result<T, E>

error[E0277]: the trait bound `JsVal: From<BadType>` is not satisfied
  --> ui-tests/async-errors.rs:59:24
   |
59 | pub async fn bad3() -> BadType {
   |                        ^^^^^^^ the trait `From<BadType>` is not implemented for `JsVal`
   |
   = help: the following other types implement trait `From<T>`:
             `JsVal` implements `From<&String>`
             `JsVal` implements `From<&T>`
             `JsVal` implements `From<&str>`
             `JsVal` implements `From<*const T>`
             `JsVal` implements `From<*mut T>`
             `JsVal` implements `From<Array>`
             `JsVal` implements `From<ArrayBuffer>`
             `JsVal` implements `From<BigInt64Array>`
           and $N others
   = note: required for `BadType` to implement `Into<JsVal>`
   = note: required for `BadType` to implement `IntoJsResult`

error[E0277]: the trait bound `Result<BadType, JsVal>: IntoJsResult` is not satisfied
  --> ui-tests/async-errors.rs:63:24
   |
63 | pub async fn bad4() -> Result<BadType, JsValue> {
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoJsResult` is not implemented for `Result<BadType, JsVal>`
   |
   = help: the following other types implement trait `IntoJsResult`:
             Result<(), E>
             Result<T, E>
